--- a/package.json
+++ b/package.json
@@ -16,34 +16,34 @@
     "format": "prettier --write --plugin-search-dir=. ."
   },
   "dependencies": {
-    "@prisma/client": "^3.13.0",
-    "@remix-run/express": "^1.4.3",
-    "@remix-run/node": "^1.4.3",
-    "@remix-run/react": "^1.4.3",
+    "@prisma/client": "^4.1.1",
+    "@remix-run/express": "^1.6.7",
+    "@remix-run/node": "^1.6.7",
+    "@remix-run/react": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
-    "@remix-run/dev": "^1.4.3",
-    "@remix-run/eslint-config": "^1.4.3",
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "@remix-run/dev": "^1.6.7",
+    "@remix-run/eslint-config": "^1.6.7",
     "@types/bcryptjs": "^2.4.2",
-    "@types/react": "^17.0.44",
-    "@types/react-dom": "^17.0.16",
-    "esbuild": ">=0.12 <1",
-    "esbuild-register": "^3.3.2",
-    "eslint": "^8.14.0",
-    "nodemon": "^2.0.16",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "esbuild": "^0.14.51",
+    "esbuild-register": "^3.3.3",
+    "eslint": "^8.21.0",
+    "nodemon": "^2.0.19",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.6.2",
-    "prisma": "^3.13.0",
-    "typescript": "^4.6.4"
+    "prettier": "^2.7.1",
+    "prisma": "^4.1.1",
+    "typescript": "^4.7.4"
   },
   "engines": {
     "node": ">=14"
